# ParallelNonlinearOptimizationLibrary

./: README.md
Source/: BFGS_bnd_linesearch.cpp  BFGS_bnd_linesearch.hpp  BFGS_bnd_linesearch_MPI_SW.cpp  BFGS_bnd_linesearch_MPI_SW.hpp  BFGS_with_bnd_linesearch_MPI.hpp  BFGS_with_bnd_linsearch_MPI.cpp  BFGS_with_linesearch.cpp  BFGS_with_linesearch.hpp  BFGS_with_linesearch_MPI.cpp  BFGS_with_linesearch_MPI.hpp  Box_boundary_functions.cpp  Box_boundary_functions.hpp  CMakeLists.txt  ExampleObjectives.hpp  Examples.cpp  Examples.hpp  ExamplesVis.cpp  ExamplesVis.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GeneticAlgorithmMPI.cpp  GeneticAlgorithmMPI.hpp  LevenbergMarquardt.cpp  LevenbergMarquardt.hpp  LevenbergMarquardtMPI.cpp  LevenbergMarquardtMPI.hpp  PNOL_Algorithm.hpp  PNOL_Objective.cpp  PNOL_Objective.hpp  SimplexSearch.cpp  SimplexSearch.hpp
